# Tile.Photo

asscii/src/: background.py  charset.py  cli.py  draw.py  pipeline.py  render.py
asscii/tests/: test_background.py  test_charset.py  test_draw.py  test_pipeline.py  test_render.py
chatgpt/: .gitignore  CHANGELOG.archive.md  CHANGELOG.md  _build_notebook.py  conftest.py  mosaic.ipynb  mosaic_core.py  plan.md  requirements.txt
chatgpt/tests/: test_color.py  test_matching.py  test_transfer.py
claude/: .gitignore  CHANGELOG.md  bead_mosaic.ipynb  plan.md  requirements.txt
claude/scripts/: build_notebook.py
claude/src/: __init__.py  match.py  render.py  scan.py  tone.py
claude/tests/: test_match.py  test_pipeline.py  test_render.py  test_scan.py  test_tone.py
doubao/: .gitignore  CHANGELOG.archive.md  CHANGELOG.md  README.md  photomosaic.ipynb  plan.md  pyproject.toml
doubao/docs/superpowers/plans/: 2026-04-17-photomosaic-toy.md
doubao/docs/superpowers/specs/: 2026-04-17-photomosaic-toy-design.md
doubao/src/mosaic/: __init__.py  config.py  deepzoom.py  match.py  render.py  report.py  tiles.py
doubao/tests/: test_e2e.py  test_match.py  test_render.py
free_style_01/: CHANGELOG.md  README.md  index.html
free_style_02/: mockup.html
gemini/: .gitignore  CHANGELOG.md  README.md  conftest.py  photomosaic.ipynb  photomosaic.py  plan.md  requirements-clip.txt  requirements.txt
gemini/src/: config.py  (+6 more)
manus/: .gitignore  CHANGELOG.md  mosaic.ipynb  requirements.txt
perplexity/: .gitignore  CHANGELOG.md  README.md  mosaic.ipynb  plan.md  requirements.txt
(+59 files in other folders)
