[project]
name = "mosaic"
version = "0.1.0"
description = "Photomosaic toy: reconstruct one photo from many"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
    "numpy>=1.24",
    "scikit-image>=0.22",
    "tqdm>=4.60",
    "matplotlib>=3.5",
    "ipykernel>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
